--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
    </nav>
 
    <main>
-    <h1>My Projects</h1>
+    <h1 class="my-projects-title">My Projects</h1>
 
     <div class="projects_buttons">
         <input type="button" value="All">
