--- a/projects.html
+++ b/projects.html
@@ -13,24 +13,24 @@
    <nav>
 
     <div class="logo">
-        <a href="#" target="_blank" >👩🏽‍💻Portfolio </a>
+        <a href="index.html" target="_blank" >👩🏽‍💻Portfolio </a>
     </div>
 
     <ul class="nav-links">
         <li>
-            <a href="#" >
+            <a href="index.html" >
             Home
         </a> 
         </li>
 
         <li>
-            <a href="#" >
+            <a href="projects.html" >
             Projects
             </a>
         </li>
 
         <li>
-            <a href="#" >
+            <a href="contact.html" >
             Contact
         </a>
         </li>
